
3.0.5
-----
- Fixed bug that caused "smtplib.SMTPDataError: (501, b'Syntax error - line too long')" error when using GMX email servers (Issue #166)
- Updated description for -v option
- Fixed typos in [report] section documentation

3.0.4
-----
- Fixed bug where program would crash is using JSON emails and email contained an error message. (Issue #164)

3.0.3
-----
- Fixed bug where guided setup was converting inbox folder name to all uppercase (Issue #163)

3.0.2
-----
- Added BytesUploaded & BytesDownload fields from JSON emails to database & reports. (Issue #157)
- Added OS verison to startup log info (Issue #162)
- Updated example .rc file with new options

3.0.1
------
- Made offline backup sets more visible by adding an "offline" report style, adding an [OFFLINE] indicator to the noactivity and lastseen reports, and ading a 'showoffline' option to the [report] section (Issue #156)

3.0.0
------
- Re-built reporting engine to allow for user-created reporting formats (Issue #130)
	- Added logic to validate custom reports before they are run
	- Added -o commandline option to validate the report configuration in the .rc file and exit the program. Useful when developing custom reports.
	- Added -y commandline option to specify which reports to run at runtime. This enables more dynamic report running
    - Reports can use default options (from [report] section) or customize those options per report
	- Created separate "no activity" report instead of including that in the standard report output. This can now be added or left off the report run at will
	- Created separate "lastseen" report to display the last seen backup date & time for each backupset. Replaces the [report]lastseen= option in the .rc file
- Added Guided Setup for new users. If there is no .rc file when the program runs the guided Setup will take the user through the most common configurable options. -g command line option forces running of Guided Setup. -G suppresses running. (Issue #139)