@@ -9,7 +9,7 @@ import os
 
 # Define version info
 version=[3,0,5]     # Program Version
-status='Beta - Issue #166'
+status='Beta 2 - Issue #166'
 dbVersion=[3,0,1]   # Required DB version
 rcVersion=[3,1,0]   # Required RC version
 copyright='Copyright (c) 2017-2021 Stephen Fried for Handy Guy Software.'
